2006-07-22  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/javax/crypto/cipher/TestOfTripleDES.java (E_TV): Re-wrote
	to show the individual DES keys dependency.
	(D_TV): Likewise.
	(attributes): New field.
	(des1KeyTest): New method.
	(des2KeyTest): Likewise.
	(test): Call above two methods.
	(encryptTest): Likewise.
	(decryptTest): Likewise.
	(vectorsTest): Re-factored to use above new (refactored) methods.

2006-07-21  David Gilbert  <david.gilbet@object-refinery.com>

	* gnu/testlet/java/awt/image/Kernel/constructor.java: New test,
	* gnu/testlet/java/awt/image/Kernel/getHeight.java: New test,
	* gnu/testlet/java/awt/image/Kernel/getKernelData.java: New test,
	* gnu/testlet/java/awt/image/Kernel/getWidth.java: New test,
	* gnu/testlet/java/awt/image/Kernel/getXOrigin.java: New test,
	* gnu/testlet/java/awt/image/Kernel/getYOrigin.java: New test.

2006-07-20  Carsten Neumann  <cn-develop@gmx.net>

	* gnu/testlet/java/lang/StrictMath/cbrt.java: New test.

2006-07-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/ConvolveOp/filter.java: New test,
	* gnu/testlet/java/awt/image/ConvolveOp/getBounds2D.java: New test,
	* gnu/testlet/java/awt/image/ConvolveOp/getEdgeCondition.java: New test,
	* gnu/testlet/java/awt/image/ConvolveOp/getPoint2D.java: New test,
	* gnu/testlet/java/awt/image/ConvolveOp/getRenderingHints.java: New test.

2006-07-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/ComponentSampleModel/constructors.java
	(testConstructor2): Added checks,
	* gnu/testlet/java/awt/image/ComponentSampleModel/getPixel.java
	(testMethod1): Restore IllegalArgumentException checks.

2006-07-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/ComponentSampleModel/createCompatibleSampleModel.java: New file,
	* gnu/testlet/java/awt/image/ComponentSampleModel/createSubsetSampleModel.java: New file,